--- a/CarShop/Areas/Admin/Views/Shared/_PanelLayout.cshtml
+++ b/CarShop/Areas/Admin/Views/Shared/_PanelLayout.cshtml
@@ -19,7 +19,9 @@
         <a asp-controller="Groups" asp-action="Index">
             <span class="fa fa-list fa-lg"></span>دسته بندی ها</a>
 
-        <a><span class="fa fa-car fa-lg"></span>محصولات</a>
+        <a asp-controller="Product" asp-action="Index" >
+            <span class="fa fa-car fa-lg"></span>محصولات</a>
+
         <a><span class="fa fa-shopping-bag fa-lg"></span>سفارشات</a>
         <a><span class="fa fa-gears fa-lg"></span>تنظیمات</a>
         <a><span class="fa fa-headphones fa-lg"></span>پشتیبانی</a>
