--- a/CarShop/Views/Home/Index.cshtml
+++ b/CarShop/Views/Home/Index.cshtml
@@ -1,8 +1,24 @@
-﻿
+﻿@model CarShop.Core.ViewModels.GroupProductViewModel
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="col-12 p-2">
+
+    @*slider*@
+    <partial name="slider.cshtml" />
+
+
+    @*groups*@
+    <div class="col-12 text-center">
+        <partial name="groupsPartial.cshtml" model="Model.Groups" />
+        <a class="btn btn-info rounded-5 m-1 text-white">
+            <span class="fa fa-ellipsis-h"></span> more</a>
+    </div>
+    <hr class="w-75 m-auto" />
+    <h1>Index</h1>
+
+</div>
 
