--- a/CarShop/Views/Home/Index.cshtml
+++ b/CarShop/Views/Home/Index.cshtml
@@ -15,7 +15,8 @@
     <div class="col-12 text-center">
         <partial name="groupsPartial.cshtml" model="Model.Groups" />
         <a class="btn btn-info rounded-5 m-1 text-white">
-            <span class="fa fa-ellipsis-h"></span> more</a>
+            <span class="fa fa-ellipsis-h"></span> more
+        </a>
     </div>
     <hr class="w-75 m-auto" />
     <h1>Index</h1>
