--- a/CarShop/Views/Shared/Header.cshtml
+++ b/CarShop/Views/Shared/Header.cshtml
@@ -1,30 +1,51 @@
 ﻿
 <header>
-   <!-- menu bar -->
-<div class="bar">
+    <!-- menu bar -->
+    <div class="bar">
 
-    <!-- title -->
-    <div class="title">
-        <h1>Sheer Driving Pleasure</h1>
+        <!-- menu logo -->
+        <div class="logo">
+            <h1>B M W</h1>
+            <img src="~/image/site/bmw-logo.png" alt="bmw-site-header">
+        </div>
 
-        <!-- search -->
-        <input type="text" placeholder="search...">
+        <!-- title -->
+        <div class="title">
+            <h1>Sheer Driving Pleasure</h1>
+            <span class="fa fa-search"></span>
+            <!-- search -->
+            <input type="text" placeholder="search...">
+        </div>
+
+       
+     
     </div>
 
+    <!-- menu button -->
+    <div class="buttons">
+        <a class="a1">
+            <span class="fa fa-home"></span>
+            <span>Home</span>
+        </a> |
 
-    <!-- menu logo -->
-    <div class="logo">
-        <h1>B M W</h1>
-        <img src="~/image/site/bmw-logo.png" alt="bmw-site-header">
+        <a class="a2">
+            <span class="fa fa-car"></span>
+            <span>Cars</span>
+        </a> |
+
+        <a class="a3">
+            <span class="fa fa-sign-in"></span>
+            <span>login</span>
+        </a> |
+
+        <a class="a4">
+            <span class="fa fa-info"></span>
+            <span>About Us</span>
+        </a> |
+
+        <a class="a3">
+            <span class="fa fa-shopping-cart"></span>
+        </a>
     </div>
-</div>
-
-<!-- menu button -->
-<div class="buttons">
-    <a class="a1">Home</a> |
-    <a class="a2">Cars</a> |
-    <a class="a3">Groups</a> |
-    <a class="a4">About Us</a>
-</div>
 
 </header>
