--- a/CarShop/wwwroot/css/MainStyle.css
+++ b/CarShop/wwwroot/css/MainStyle.css
@@ -4,9 +4,9 @@
 
 body {
     margin: auto;
-    direction: rtl;
+    direction: ltr;
     background-color: white;
-    overflow-x:hidden;
+    overflow-x: hidden;
 }
 
 /*//////////// top menu //////////////*/
@@ -15,30 +15,37 @@ header {
     padding-right: 15px;
     padding-top: 35px;
 }
+
     header .title {
         position: absolute;
-        width: 100%;
+        width: calc(100% - 190px);
         top: 25px;
         color: white;
     }
 
         header .title h1 {
-            margin-right: 220px;
+            float: right;
             margin-top: 10px;
             display: inline-block;
         }
 
+        header .title span {
+            position: relative;
+            z-index:10;
+            color: var(--skyblue);
+            margin-left: 100px;
+        }
+
         header .title input {
-            float: left;
-            margin-left: 132px;
-            margin-top: 20px;
-            padding: 10px;
+            position: relative;
+            left: -32px;
+            margin-top: 25px;
+            padding: 6px 10px 6px 36px;
             background-color: whitesmoke;
             border-radius: 45px;
-            width: 75px;
+            width: 110px;
             border: none;
             outline: none;
-            direction: ltr;
             transition: 0.3s;
         }
 
@@ -62,7 +69,7 @@ header {
         background-color: black;
         position: relative;
         top: -32px;
-        right: 64px;
+        left: calc(100% - 150px);
     }
 
         header .logo:hover img {
@@ -99,7 +106,7 @@ header {
         position: relative;
         border-top: 5px solid var(--skyblue);
         top: -5px;
-        right: 70%;
+        left: 32px;
     }
 
         header .buttons a {
@@ -119,9 +126,12 @@ header {
                 transform: translateY(15px);
             }
 
+          /*  header .buttons a:hover .fa{
+                color:white;
+            }*/
+
 /*///////////// slider /////////////*/
 .slider {
-    direction:ltr;
     width: 100%;
     height: 320px;
     border-radius: 10px;
