--- a/CarShop/Views/Shared/Header.cshtml
+++ b/CarShop/Views/Shared/Header.cshtml
@@ -33,7 +33,7 @@
             <span>Cars</span>
         </a> |
 
-        <a class="a3">
+        <a asp-controller="Admin" asp-action="index" class="a3">
             <span class="fa fa-sign-in"></span>
             <span>login</span>
         </a> |
