--- a/CarShop/Areas/Admin/Views/Product/Delete.cshtml
+++ b/CarShop/Areas/Admin/Views/Product/Delete.cshtml
@@ -1,5 +1,14 @@
-﻿
+﻿@model CarShop.Database.Models.Product
 
-<h1>DELETE</h1>
-<button>Yes</button>
-<button>No</button>
+<div>
+    <h1>DELETE</h1>
+    <hr />
+    <h3>عنوان محصول : @Model.ProductName</h3>
+    <h4 class="text-danger">آیا حذف می کنید؟</h4>
+    <form asp-controller="product" asp-action="delete">
+        <input asp-for="Id" hidden />
+        <button type="submit" class="btn btn-danger">Yes</button>
+        <a asp-controller="product" asp-action="index" class="btn btn-outline-danger">No</a>
+    </form>
+</div>
+
