--- a/CarShop/Areas/Admin/Views/Product/Index.cshtml
+++ b/CarShop/Areas/Admin/Views/Product/Index.cshtml
@@ -74,10 +74,10 @@
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a onclick="Delete()" 
-                        data-bs-toggle="modal" 
-                        data-bs-target="#exampleModal" 
-                        class="btn btn-danger">
+                    <a onclick="Delete('@(item.Id)')"
+                   data-bs-toggle="modal"
+                   data-bs-target="#exampleModal"
+                   class="btn btn-danger">
                         <span class="fa fa-trash-o"></span>
                     </a>
                 </td>
@@ -97,9 +97,9 @@
             <div id="modalBody" class="modal-body">
                 ...
             </div>
-          @*  <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+            @*  <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
             </div>*@
         </div>
     </div>
@@ -115,11 +115,11 @@
         myInput.focus()
     })
 
-    function Delete() {
+    function Delete(productId) {
         $.ajax({
             url: '/admin/product/delete',
             type: 'get',
-            data: {},
+            data: {/*controller parameter*/ id : /*send parameter*/ productId },
             success: (result) => {
                 document.getElementById('modalBody').innerHTML = result;
             }
