--- a/CarShop/wwwroot/css/MainStyle.css
+++ b/CarShop/wwwroot/css/MainStyle.css
@@ -1,5 +1,6 @@
 ﻿* {
     --skyblue: rgb(0, 129, 180);
+    --blue: #0653b6;
 }
 
 body {
@@ -229,3 +230,58 @@ header {
         right: 10px;
     }
 }
+
+
+/* products */
+.product-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 10px;
+    width: 100%;
+    margin: auto;
+    /* padding: 5px 32px; */
+}
+
+    .product-grid .product {
+        background-color: #f4f4f4;
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+        border-radius: 5px;
+        overflow: hidden;
+        aspect-ratio: 4/3;
+        position: relative;
+    }
+
+        .product-grid .product img {
+            width: 100%;
+        }
+
+        .product-grid .product .product-info {
+            width: 100%;
+            background-color: #1e1e1e77;
+            padding: 5px;
+            color: white;
+            position: absolute;
+            bottom: 0;
+        }
+
+            .product-grid .product .product-info .button {
+                background-color: var(--blue);
+                padding: 5px 15px;
+                border-radius: 5px;
+                color: white;
+                font-size: 16pt;
+                position: absolute;
+                bottom: 10px;
+                right: 36px;
+                outline: 0;
+                border: 0;
+                box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4);
+                text-decoration:none;
+                transition: 0.5s;
+            }
+
+                .product-grid .product .product-info .button:hover {
+                    cursor: pointer;
+                    background-color:rgb(0, 0, 0, 0.25);
+                    box-shadow: none;
+                }
