--- a/CarShop/Views/Home/Index.cshtml
+++ b/CarShop/Views/Home/Index.cshtml
@@ -23,6 +23,12 @@
     @*products*@
     <div class="col-12 p-0 mt-3">
         <partial name="productsPartial" model="Model.Products" />
+
+        <div class="col-12 text-center pt-3">
+            <a asp-action="products" class="btn btn-outline-info rounded-5 m-1">
+                <span></span> more product...
+            </a>
+        </div>
     </div>
 
 
