--- a/CarShop/wwwroot/css/MainStyle.css
+++ b/CarShop/wwwroot/css/MainStyle.css
@@ -32,7 +32,7 @@ header {
 
         header .title span {
             position: relative;
-            z-index:10;
+            z-index: 10;
             color: var(--skyblue);
             margin-left: 100px;
         }
@@ -127,7 +127,7 @@ header {
                 transform: translateY(15px);
             }
 
-          /*  header .buttons a:hover .fa{
+/*  header .buttons a:hover .fa{
                 color:white;
             }*/
 
@@ -251,9 +251,74 @@ header {
         position: relative;
     }
 
+        .product-grid .product .product-group {
+            position: absolute;
+            top: 8px;
+            left: 0;
+            background-color: white;
+            padding: 2px 5px;
+            text-decoration: none;
+            color: var(--skyblue);
+            border-radius: 0 5px 5px 0;
+            box-shadow: 0 1px 2px 0 rgb(0, 0, 0, 0.20);
+            font-style: italic;
+            transition: 0.3s;
+        }
+
+            .product-grid .product .product-group:hover {
+                background-color: var(--skyblue);
+                color: white;
+                box-shadow: none;
+                cursor: pointer;
+            }
+
+
+        .product-grid .product .product-selloff {
+            position: absolute;
+            top: 8px;
+            right: 0;
+            background-color: red;
+            padding: 2px 5px;
+            text-decoration: none;
+            color: white;
+            border-radius: 5px 0 0 5px;
+            box-shadow: 0 1px 2px 0 rgb(0, 0, 0, 0.20);
+            font-style: italic;
+            font-weight: bold;
+            cursor: pointer;
+            transition:0.5s;
+        }
+        .product-grid .product:hover .product-group{
+            left:-50%;
+        }.product-grid .product:hover .product-selloff{
+            right:-50%;
+        }
+
+        .product-grid .product .product-price {
+            position: absolute;
+            color: white;
+            top: 100px;
+            left: -100%;
+            width: 100%;
+            text-align: center;
+            text-shadow: 1px 2px 0 rgb(0, 0, 0, 0.40);
+            z-index: 10;
+            transition: 0.5s;
+        }
+
+        .product-grid .product:hover .product-price {
+            left: 0;
+        }
+
         .product-grid .product img {
             width: 100%;
+            transition:0.5s;
         }
+        .product-grid .product:hover img {
+            /*filter:blur(5px);*/
+            transform:scale(1.25);
+        }
+
 
         .product-grid .product .product-info {
             width: 100%;
@@ -276,12 +341,12 @@ header {
                 outline: 0;
                 border: 0;
                 box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4);
-                text-decoration:none;
+                text-decoration: none;
                 transition: 0.5s;
             }
 
                 .product-grid .product .product-info .button:hover {
                     cursor: pointer;
-                    background-color:rgb(0, 0, 0, 0.25);
+                    background-color: rgb(0, 0, 0, 0.25);
                     box-shadow: none;
                 }
