--- a/CarShop/Views/Home/ProductsPartial.cshtml
+++ b/CarShop/Views/Home/ProductsPartial.cshtml
@@ -13,13 +13,13 @@
 
             @*selloff title*@
             @{
-                if (item.SellOff>0)
+                if (item.SellOff > 0)
                 {
                     <a class="product-selloff">@item.SellOff %</a>
                 }
             }
 
-            <h1 class="product-price" >@item.Price.ToString("n0")</h1>
+            <h1 class="product-price">@item.Price.ToString("n0")</h1>
 
             <img src="~/Image/product/@item.Img" alt="@item.ProductName">
 
@@ -27,7 +27,10 @@
             <div class="product-info">
                 <h1>@item.ProductName</h1>
                 <p>@item.Des</p>
-                <a asp-controller="home" asp-action="productInfo" class="button">more...</a>
+                <a asp-controller="home"
+               asp-action="productInfo"
+               asp-route-id="@item.Id"
+               class="button">more...</a>
             </div>
 
         </div>
