--- a/CarShop/Views/Home/ProductInfo.cshtml
+++ b/CarShop/Views/Home/ProductInfo.cshtml
@@ -22,6 +22,9 @@
         <p>@Model.Des</p>
         <h6>inventory : @Model.Inventory</h6>
 
+        <partial name="productFeatureTable" model="ViewBag.ProductFeatures">
+
+
         @*add to shoppingcart*@
         <div class="col-md-4 col-12 float-end">
             @{
