--- a/CarShop/Areas/Admin/Views/Product/Index.cshtml
+++ b/CarShop/Areas/Admin/Views/Product/Index.cshtml
@@ -77,6 +77,9 @@
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="CreateProductFeature" 
+                        asp-route-id="@item.Id">Features</a> |
+
                     <a onclick="Delete('@(item.Id)')"
                    data-bs-toggle="modal"
                    data-bs-target="#exampleModal"
