--- a/CarShop/Areas/Admin/Views/Shared/_PanelLayout.cshtml
+++ b/CarShop/Areas/Admin/Views/Shared/_PanelLayout.cshtml
@@ -14,7 +14,7 @@
 <body>
 
     <div class="sidebar col-md-3 col-6">
-        <a><span class="fa fa-home fa-lg"></span>صفحه هوم</a>
+        <a href="~/"><span class="fa fa-home fa-lg"></span>صفحه هوم</a>
         <a><span class="fa fa-users fa-lg"></span>کاربران</a>
         <a asp-controller="Groups" asp-action="Index">
             <span class="fa fa-list fa-lg"></span>دسته بندی ها</a>
