--- a/CarShop/Areas/Admin/Views/Shared/_PanelLayout.cshtml
+++ b/CarShop/Areas/Admin/Views/Shared/_PanelLayout.cshtml
@@ -25,7 +25,7 @@
         <a><span class="fa fa-shopping-bag fa-lg"></span>سفارشات</a>
         <a><span class="fa fa-gears fa-lg"></span>تنظیمات</a>
         <a><span class="fa fa-headphones fa-lg"></span>پشتیبانی</a>
-        <a><span class="fa fa-sign-out fa-lg"></span>خروج</a>
+        <a asp-controller="account" asp-action="logout" ><span class="fa fa-sign-out fa-lg"></span>خروج</a>
     </div>
 
     <div class="col-md-9 col-6">
