--- a/CarShop/Areas/Admin/Views/Shared/_PanelLayout.cshtml
+++ b/CarShop/Areas/Admin/Views/Shared/_PanelLayout.cshtml
@@ -22,7 +22,8 @@
         <a asp-controller="Product" asp-action="Index" >
             <span class="fa fa-car fa-lg"></span>محصولات</a>
 
-        <a><span class="fa fa-shopping-bag fa-lg"></span>سفارشات</a>
+        <a><span class="fa fa-shopping-cart fa-lg"></span>سفارشات</a>
+        <a asp-area="" asp-controller="profile" asp-action="shoppingCart"><span class="fa fa-shopping-bag fa-lg"></span>سبد خرید</a>
         <a><span class="fa fa-gears fa-lg"></span>تنظیمات</a>
         <a><span class="fa fa-headphones fa-lg"></span>پشتیبانی</a>
         <a asp-controller="account" asp-action="logout" ><span class="fa fa-sign-out fa-lg"></span>خروج</a>
